--- a/astrology/pom.xml
+++ b/astrology/pom.xml
@@ -77,13 +77,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-		<!-- from local -->
-		<dependency>
-			<groupId>cz.kibo</groupId>
-			<artifactId>astrology</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<!-- from local -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -93,6 +86,11 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20160810</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.astrology</groupId>
+			<artifactId>astrologyAPI</artifactId>
+			<version>1.0</version>		   
 		</dependency>
 	</dependencies>
 
